# sircon

./: CMakeLists.txt  Functions.cpp  Functions.h  Readme.md  main.cpp  run.sh
data/: data_Amazon.py  data_p2p.py  data_user.py
include/: ConfigArgs.cpp  ConfigArgs.h  Graph.cpp  Graph.h
